--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "ratio": "c",
         "vector": "c",
         "stdio.h": "c",
-        "cub3d.h": "c"
+        "cub3d.h": "c",
+        "cub3d_bonus.h": "c"
     }
 }
